[package]
name = "medata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.68"
migration = { path = "migration" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-rocket = "0.5.2"
serde_json = "1.0.96"
tokio = "1.27.0"
